--- a/layout1.html
+++ b/layout1.html
@@ -5,37 +5,176 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>layout</title>
+    <link rel="stylesheet" href="./css/all.min.css">
 </head>
 
 <body>
     <!-- 헤더탑 -->
     <div class="hdrTop">
-        <div class="hdrTopGrid"></div>
+        <div class="hdrTopGrid">
+        </div>
     </div>
 
     <!-- 헤더 -->
     <div class="header">
-        <div class="headerGrid"></div>
+        <div class="headerGrid">
+            <div class="logo">logo here</div>
+            <div class="nav">
+                <div class="menu">about</div>
+                <div class="menu">news</div>
+                <div class="menu">portfolio</div>
+            </div>
+        </div>
     </div>
 
     <!-- 컨텐츠1 -->
     <div class="content cnt1">
-        <div class="cnt1Grid"></div>
+        <div class="cnt1Grid">
+            <div class="header">
+                <div class="title">Content title</div>
+                <div class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque aut modi autem tenetur odio sed saepe esse eligendi. Praesentium inventore nam ducimus dolores quae alias sequi consequuntur, perspiciatis iste quaerat.</div>
+            </div>
+            <div class="section">
+                <div class="artTop">
+                    <div class="article">
+                        <div class="image">컨텐츠1이미지</div>
+                        <div class="texts">
+                            <div class="title">Segment title</div>
+                            <div class="subtitle">Lorem ipsum dolor sit amet.</div>
+                            <div class="note">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel dolorum libero atque earum sint animi voluptatibus enim, voluptate dicta perferendis vitae aliquid quaerat dolore optio qui nisi. Tenetur, voluptatibus consectetur.</div>
+                            <div class="icons">
+                                <i class="fa-solid fa-thumbs-up"></i>
+                                <i class="fa-solid fa-share-nodes"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <div class="image">컨텐츠1이미지</div>
+                        <div class="texts">
+                            <div class="title">Segment title</div>
+                            <div class="subtitle">Lorem ipsum dolor sit amet.</div>
+                            <div class="note">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel dolorum libero atque earum sint animi voluptatibus enim, voluptate dicta perferendis vitae aliquid quaerat dolore optio qui nisi. Tenetur, voluptatibus consectetur.</div>
+                            <div class="icons">
+                                <i class="fa-solid fa-thumbs-up"></i>
+                                <i class="fa-solid fa-share-nodes"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="artBottom">
+                    <div class="article">
+                        <div class="image">컨텐츠1이미지</div>
+                        <div class="texts">
+                            <div class="title">Segment title</div>
+                            <div class="note">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis repellat minima, consectetur architecto ut maiores sequi ex repudiandae molestiae dolorem dicta harum sed sint voluptatibus molestias nobis hic nesciunt nisi?</div>
+                            <div class="icons">
+                                <i class="fa-solid fa-thumbs-up"></i>
+                                <i class="fa-solid fa-share-nodes"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <div class="image">컨텐츠1이미지</div>
+                        <div class="texts">
+                            <div class="title">Segment title</div>
+                            <div class="note">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis repellat minima, consectetur architecto ut maiores sequi ex repudiandae molestiae dolorem dicta harum sed sint voluptatibus molestias nobis hic nesciunt nisi?</div>
+                            <div class="icons">
+                                <i class="fa-solid fa-thumbs-up"></i>
+                                <i class="fa-solid fa-share-nodes"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <div class="image">컨텐츠1이미지</div>
+                        <div class="texts">
+                            <div class="title">Segment title</div>
+                            <div class="note">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis repellat minima, consectetur architecto ut maiores sequi ex repudiandae molestiae dolorem dicta harum sed sint voluptatibus molestias nobis hic nesciunt nisi?</div>
+                            <div class="icons">
+                                <i class="fa-solid fa-thumbs-up"></i>
+                                <i class="fa-solid fa-share-nodes"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- 컨텐츠2 -->
     <div class="content cnt2">
-        <div class="cnt2Grid"></div>
+        <div class="cnt2Grid">
+            <div class="header">
+                <div class="title">Content title</div>
+                <div class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque aut modi autem tenetur odio sed saepe esse eligendi. Praesentium inventore nam ducimus dolores quae alias sequi consequuntur, perspiciatis iste quaerat.</div>
+            </div>
+            <div class="section">
+                <div class="article">
+                    <div class="image">컨텐츠2번</div>
+                    <div class="texts">
+                        <div class="title">Segment title</div>
+                        <div class="subtitle">Lorem ipsum dolor sit amet.</div>
+                        <div class="note">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea reprehenderit fuga in porro dolores ad modi, non esse aliquid, quibusdam iure voluptate ut aut fugiat itaque minus. In, ad ipsam.</div>
+                        <div class="button">button</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- 컨텐츠3 -->
     <div class="content cnt3">
-        <div class="cnt3Grid"></div>
+        <div class="cnt3Grid">
+            <div class="header">
+                <div class="title">Content title</div>
+                <div class="subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque aut modi autem tenetur odio sed saepe esse eligendi. Praesentium inventore nam ducimus dolores quae alias sequi consequuntur, perspiciatis iste quaerat.</div>
+            </div>
+            <div class="section">
+                <div class="article">
+                    <div class="image">컨텐츠3 이미지</div>
+                    <div class="texts">
+                        <div class="title">Segment title</div>
+                        <div class="note">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quos labore rem autem omnis tempora earum debitis voluptas ullam in molestiae voluptatum natus, maiores temporibus odio illum soluta facilis quibusdam?</div>
+                    </div>
+                </div>
+                <div class="article">
+                    <div class="image">컨텐츠3 이미지</div>
+                    <div class="texts">
+                        <div class="title">Segment title</div>
+                        <div class="note">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quos labore rem autem omnis tempora earum debitis voluptas ullam in molestiae voluptatum natus, maiores temporibus odio illum soluta facilis quibusdam?</div>
+                    </div>
+                </div>
+                <div class="article">
+                    <div class="image">컨텐츠3 이미지</div>
+                    <div class="texts">
+                        <div class="title">Segment title</div>
+                        <div class="note">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quos labore rem autem omnis tempora earum debitis voluptas ullam in molestiae voluptatum natus, maiores temporibus odio illum soluta facilis quibusdam?</div>
+                    </div>
+                </div>
+                <div class="article">
+                    <div class="image">컨텐츠3 이미지</div>
+                    <div class="texts">
+                        <div class="title">Segment title</div>
+                        <div class="note">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quos labore rem autem omnis tempora earum debitis voluptas ullam in molestiae voluptatum natus, maiores temporibus odio illum soluta facilis quibusdam?</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- 푸터 -->
     <div class="footer">
-        <div class="footerGrid"></div>
+        <div class="footerGrid">
+            <div class="logo">logo here</div>
+            <div class="note">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, eaque? Corporis esse
+                sunt neque sint? Nesciunt repellendus ut modi adipisci expedita soluta neque facere odit doloribus,
+                obcaecati deserunt alias assumenda.</div>
+            <div class="sns">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+        </div>
     </div>
 
 
