--- a/layout2.html
+++ b/layout2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>layout selfver</title>
     <link rel="stylesheet" href="css/all.min.css" class="css">
+    <link rel="stylesheet" href="./css/layout2.css">
 </head>
 
 <body>
@@ -31,11 +32,72 @@
         <div class="content1grid">
             <div class="header">
                 <h2>content title</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quia molestias eligendi quas maiores porro reprehenderit natus obcaecati consectetur adipisci. Expedita porro sint esse voluptatum nemo nobis, obcaecati quis atque.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quia molestias eligendi quas maiores
+                    porro reprehenderit natus obcaecati consectetur adipisci. Expedita porro sint esse voluptatum nemo
+                    nobis, obcaecati quis atque.</p>
             </div>
             <div class="section">
-                <div class="arttop"></div>
-                <div class="artbottom"></div>
+                <div class="arttop">
+                    <div class="article">
+                        <img src="" alt="">
+                        <div class="texts">
+                            <h3>segment title</h3>
+                            <h4>Lorem ipsum dolor sit amet.</h4>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod doloremque ipsum iusto blanditiis, dignissimos voluptates? Modi ab est perspiciatis asperiores cum animi, aut voluptatum numquam pariatur molestias? Suscipit, voluptatibus numquam.</p>
+                            <div class="icons">
+                                <i></i>
+                                <i></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <img src="" alt="">
+                        <div class="texts">
+                            <h3>segment title</h3>
+                            <h4>Lorem ipsum dolor sit amet.</h4>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod doloremque ipsum iusto blanditiis, dignissimos voluptates? Modi ab est perspiciatis asperiores cum animi, aut voluptatum numquam pariatur molestias? Suscipit, voluptatibus numquam.</p>
+                            <div class="icons">
+                                <i></i>
+                                <i></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="artbottom">
+                    <div class="article">
+                        <img src="" alt="">
+                        <div class="texts">
+                            <h3>segment title</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod doloremque ipsum iusto blanditiis, dignissimos voluptates? Modi ab est perspiciatis asperiores cum animi, aut voluptatum numquam pariatur molestias? Suscipit, voluptatibus numquam.</p>
+                            <div class="icons">
+                                <i></i>
+                                <i></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <img src="" alt="">
+                        <div class="texts">
+                            <h3>segment title</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod doloremque ipsum iusto blanditiis, dignissimos voluptates? Modi ab est perspiciatis asperiores cum animi, aut voluptatum numquam pariatur molestias? Suscipit, voluptatibus numquam.</p>
+                            <div class="icons">
+                                <i></i>
+                                <i></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <img src="" alt="">
+                        <div class="texts">
+                            <h3>segment title</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod doloremque ipsum iusto blanditiis, dignissimos voluptates? Modi ab est perspiciatis asperiores cum animi, aut voluptatum numquam pariatur molestias? Suscipit, voluptatibus numquam.</p>
+                            <div class="icons">
+                                <i></i>
+                                <i></i>
+                            </div>
+                        </div>
+                    </div>texts
+                </div>
             </div>
         </div>
     </div>
@@ -44,11 +106,19 @@
         <div class="content2grid">
             <div class="header">
                 <h2>content title</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quia molestias eligendi quas maiores porro reprehenderit natus obcaecati consectetur adipisci. Expedita porro sint esse voluptatum nemo nobis, obcaecati quis atque.</p>
+                <p>Lorem <span>ipsum</span>, dolor sit amet <b>consectetur</b> <strong>adipisicing</strong> elit. Iusto quia molestias eligendi quas maiores
+                    porro reprehenderit natus obcaecati consectetur adipisci. Expedita porro sint esse voluptatum nemo
+                    nobis, obcaecati quis atque.</p>
             </div>
             <div class="section">
                 <div class="article">
-                    <img src="" alt="">
+                    <video src="244754_small.mp4" autoplay muted loop>비디오 설</video>
+                    <div class="texts">
+                        <h3>Segment title</h3>
+                        <h4>Lorem ipsum dolor sit amet.</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita quas fugiat tempore aperiam aspernatur inventore eveniet sit saepe minima tempora laborum dignissimos temporibus recusandae excepturi sequi iusto, molestiae autem nemo.</p>
+                        <div class="button"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -58,24 +128,40 @@
         <div class="content3grid">
             <div class="header">
                 <h2>content title</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quia molestias eligendi quas maiores porro reprehenderit natus obcaecati consectetur adipisci. Expedita porro sint esse voluptatum nemo nobis, obcaecati quis atque.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quia molestias eligendi quas maiores
+                    porro reprehenderit natus obcaecati consectetur adipisci. Expedita porro sint esse voluptatum nemo
+                    nobis, obcaecati quis atque.</p>
             </div>
             <div class="section">
                 <div class="article">
-                    <img src="./kUGqKDay3xxr0fnP08hvRGkkFheP4nvcZ8yRHdV64XHfUFUS7L_xMpdW4Ae0Tz1bjV6q3YQJW17mZPbzpPDMug.webp" alt="컴퓨터터">
-                    <div class="texts"></div>
+                    <img src="images/kUGqKDay3xxr0fnP08hvRGkkFheP4nvcZ8yRHdV64XHfUFUS7L_xMpdW4Ae0Tz1bjV6q3YQJW17mZPbzpPDMug.webp"
+                        alt="컴퓨터">
+                    <div class="texts">
+                        <h3>Segment title</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam. Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi dolores a earum rerum omnis vel quam.</p>
+                    </div>
+
                 </div>
                 <div class="article">
                     <img src="" alt="">
-                    <div class="texts"></div>
+                    <div class="texts">
+                        <h3>Segment title</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam. Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi dolores a earum rerum omnis vel quam.</p>
+                    </div>
                 </div>
                 <div class="article">
                     <img src="" alt="">
-                    <div class="texts"></div>
+                    <div class="texts">
+                        <h3>Segment title</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam. Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi dolores a earum rerum omnis vel quam.</p>
+                    </div>
                 </div>
                 <div class="article">
                     <img src="" alt="">
-                    <div class="texts"></div>
+                    <div class="texts">
+                        <h3>Segment title</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam. Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi dolores a earum rerum omnis vel quam.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -84,12 +170,15 @@
     <div class="footer">
         <div class="footergrid">
             <h4>logo here</h4>
-            <pre>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto earum distinctio exercitationem facilis
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto earum distinctio exercitationem facilis
                 perspiciatis at, velit neque adipisci sapiente ipsum ratione quasi cumque. Distinctio accusamus ab
                 beatae! Dicta, nobis fuga?</p>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-twitter"></i>
+            <div class="sns">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+
         </div>
     </div>
     </div>
