--- a/layout2.html
+++ b/layout2.html
@@ -28,8 +28,8 @@
         </div>
     </div>
     <!-- 컨텐츠1 -->
-    <div class="content1">
-        <div class="content1grid">
+    <div class="content cnt1">
+        <div class="contentgrid">
             <div class="header">
                 <h2>content title</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quia molestias eligendi quas maiores
@@ -102,8 +102,8 @@
         </div>
     </div>
     <!-- 컨텐츠2 -->
-    <div class="content2">
-        <div class="content2grid">
+    <div class="content cnt2">
+        <div class="contentgrid">
             <div class="header">
                 <h2>content title</h2>
                 <p>Lorem <span>ipsum</span>, dolor sit amet <b>consectetur</b> <strong>adipisicing</strong> elit. Iusto quia molestias eligendi quas maiores
@@ -124,8 +124,8 @@
         </div>
     </div>
     <!-- 컨텐츠3 -->
-    <div class="content3">
-        <div class="content3grid">
+    <div class="content cnt3">
+        <div class="contentgrid">
             <div class="header">
                 <h2>content title</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quia molestias eligendi quas maiores
