--- a/layout4.html
+++ b/layout4.html
@@ -5,20 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>layout selfver</title>
-    <link rel="stylesheet" href="css/all.min.css" class="css">
-    <link rel="stylesheet" href="./css/layout2.css">
 </head>
 
 <body>
     <!-- 헤더탑 -->
     <div class="headertop">
         <div class="htgrid">
-            <i class="fa-solid fa-sleigh"></i>
+            <i></i>
         </div>
     </div>
     <!-- 헤더 -->
     <div class="header">
-        <div class="hdrgrid">
+        <div class="headgrid">
             <h1>logo here</h1>
             <ul>
                 <li>about</li>
@@ -29,12 +27,12 @@
     </div>
     <!-- 컨텐츠1 -->
     <div class="content cnt1">
-        <div class="contentgrid">
+        <div class="contentgrid1">
             <div class="header">
                 <h2>content title</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quia molestias eligendi quas maiores
-                    porro reprehenderit natus obcaecati consectetur adipisci. Expedita porro sint esse voluptatum nemo
-                    nobis, obcaecati quis atque.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque ullam minus dicta doloremque eveniet
+                    tempore nam minima? Nam nobis vero consequuntur eum! Perferendis et dolor enim id eum consequuntur
+                    quibusdam!</p>
             </div>
             <div class="section">
                 <div class="arttop">
@@ -43,7 +41,10 @@
                         <div class="texts">
                             <h3>segment title</h3>
                             <h4>Lorem ipsum dolor sit amet.</h4>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod doloremque ipsum iusto blanditiis, dignissimos voluptates? Modi ab est perspiciatis asperiores cum animi, aut voluptatum numquam pariatur molestias? Suscipit, voluptatibus numquam.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt nihil sapiente
+                                dolorem deserunt sit modi omnis fugit id amet eos illo exercitationem sequi laudantium
+                                odit? Culpa odio ad est.
+                            </p>
                             <div class="icons">
                                 <i></i>
                                 <i></i>
@@ -55,7 +56,9 @@
                         <div class="texts">
                             <h3>segment title</h3>
                             <h4>Lorem ipsum dolor sit amet.</h4>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod doloremque ipsum iusto blanditiis, dignissimos voluptates? Modi ab est perspiciatis asperiores cum animi, aut voluptatum numquam pariatur molestias? Suscipit, voluptatibus numquam.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt nihil sapiente
+                                dolorem deserunt sit modi omnis fugit id amet eos illo exercitationem sequi laudantium
+                                odit? Culpa odio ad est.</p>
                             <div class="icons">
                                 <i></i>
                                 <i></i>
@@ -68,7 +71,9 @@
                         <img src="" alt="">
                         <div class="texts">
                             <h3>segment title</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod doloremque ipsum iusto blanditiis, dignissimos voluptates? Modi ab est perspiciatis asperiores cum animi, aut voluptatum numquam pariatur molestias? Suscipit, voluptatibus numquam.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt nihil sapiente
+                                dolorem deserunt sit modi omnis fugit id amet eos illo exercitationem sequi laudantium
+                                odit? Culpa odio ad est.</p>
                             <div class="icons">
                                 <i></i>
                                 <i></i>
@@ -79,7 +84,9 @@
                         <img src="" alt="">
                         <div class="texts">
                             <h3>segment title</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod doloremque ipsum iusto blanditiis, dignissimos voluptates? Modi ab est perspiciatis asperiores cum animi, aut voluptatum numquam pariatur molestias? Suscipit, voluptatibus numquam.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt nihil sapiente
+                                dolorem deserunt sit modi omnis fugit id amet eos illo exercitationem sequi laudantium
+                                odit? Culpa odio ad est.</p>
                             <div class="icons">
                                 <i></i>
                                 <i></i>
@@ -90,7 +97,9 @@
                         <img src="" alt="">
                         <div class="texts">
                             <h3>segment title</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod doloremque ipsum iusto blanditiis, dignissimos voluptates? Modi ab est perspiciatis asperiores cum animi, aut voluptatum numquam pariatur molestias? Suscipit, voluptatibus numquam.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt nihil sapiente
+                                dolorem deserunt sit modi omnis fugit id amet eos illo exercitationem sequi laudantium
+                                odit? Culpa odio ad est.</p>
                             <div class="icons">
                                 <i></i>
                                 <i></i>
@@ -103,20 +112,24 @@
     </div>
     <!-- 컨텐츠2 -->
     <div class="content cnt2">
-        <div class="contentgrid">
+        <div class="contentgrid2">
             <div class="header">
                 <h2>content title</h2>
-                <p>Lorem <span>ipsum</span>, dolor sit amet <b>consectetur</b> <strong>adipisicing</strong> elit. Iusto quia molestias eligendi quas maiores
-                    porro reprehenderit natus obcaecati consectetur adipisci. Expedita porro sint esse voluptatum nemo
-                    nobis, obcaecati quis atque.</p>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita quas fugiat tempore
+                    aperiam aspernatur inventore eveniet sit saepe minima tempora laborum dignissimos temporibus
+                    recusandae excepturi sequi iusto, molestiae autem nemo.
+                </p>
             </div>
             <div class="section">
                 <div class="article">
-                    <video src="244754_small.mp4" autoplay muted loop>비디오 설</video>
+                    <img src="" alt="">
                     <div class="texts">
                         <h3>Segment title</h3>
                         <h4>Lorem ipsum dolor sit amet.</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita quas fugiat tempore aperiam aspernatur inventore eveniet sit saepe minima tempora laborum dignissimos temporibus recusandae excepturi sequi iusto, molestiae autem nemo.</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita quas fugiat tempore
+                            aperiam aspernatur inventore eveniet sit saepe minima tempora laborum dignissimos temporibus
+                            recusandae excepturi sequi iusto, molestiae autem nemo.</p>
                         <div class="button"></div>
                     </div>
                 </div>
@@ -125,20 +138,21 @@
     </div>
     <!-- 컨텐츠3 -->
     <div class="content cnt3">
-        <div class="contentgrid">
+        <div class="contentgrid3">
             <div class="header">
                 <h2>content title</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto quia molestias eligendi quas maiores
-                    porro reprehenderit natus obcaecati consectetur adipisci. Expedita porro sint esse voluptatum nemo
-                    nobis, obcaecati quis atque.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque ullam minus dicta doloremque eveniet
+                    tempore nam minima? Nam nobis vero consequuntur eum! Perferendis et dolor enim id eum consequuntur
+                    quibusdam!</p>
             </div>
             <div class="section">
                 <div class="article">
-                    <img src="images/kUGqKDay3xxr0fnP08hvRGkkFheP4nvcZ8yRHdV64XHfUFUS7L_xMpdW4Ae0Tz1bjV6q3YQJW17mZPbzpPDMug.webp"
-                        alt="컴퓨터">
+                    <img src="" alt="">
                     <div class="texts">
                         <h3>Segment title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam. Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi dolores a earum rerum omnis vel quam.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam.
+                            Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi
+                            dolores a earum rerum omnis vel quam.</p>
                     </div>
 
                 </div>
@@ -146,21 +160,27 @@
                     <img src="" alt="">
                     <div class="texts">
                         <h3>Segment title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam. Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi dolores a earum rerum omnis vel quam.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam.
+                            Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi
+                            dolores a earum rerum omnis vel quam.</p>
                     </div>
                 </div>
                 <div class="article">
                     <img src="" alt="">
                     <div class="texts">
                         <h3>Segment title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam. Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi dolores a earum rerum omnis vel quam.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam.
+                            Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi
+                            dolores a earum rerum omnis vel quam.</p>
                     </div>
                 </div>
                 <div class="article">
                     <img src="" alt="">
                     <div class="texts">
                         <h3>Segment title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam. Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi dolores a earum rerum omnis vel quam.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam.
+                            Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi
+                            dolores a earum rerum omnis vel quam.</p>
                     </div>
                 </div>
             </div>
@@ -170,13 +190,13 @@
     <div class="footer">
         <div class="footergrid">
             <h4>logo here</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto earum distinctio exercitationem facilis
-                perspiciatis at, velit neque adipisci sapiente ipsum ratione quasi cumque. Distinctio accusamus ab
-                beatae! Dicta, nobis fuga?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam temporibus sed repudiandae, quaerat
+                commodi eum pariatur illo quos molestias sint corporis tempora molestiae assumenda animi nisi possimus
+                tempore sit beatae!</p>
             <div class="sns">
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-twitter"></i>
+                <i></i>
+                <i></i>
+                <i></i>
             </div>
 
         </div>
